fix overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ footer {
 }
 
 #debug-data-input {
-    width: 100%;
+    width: 98%;
 }
 
 #debug-load-data {
